updated to new enum names